<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/favorites"
            android:title="Favorites" />
    </group>

    <group>
        <item
            android:id="@+id/nav_watch_later"
            android:icon="@drawable/watch_later_elapsed"
            android:title="@string/watch_later" />
    </group>


    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share"
                android:title="@string/share_title" />
        </menu>
    </item>

    <item android:title="Theme">
        <menu>
            <item
                android:id="@+id/day_night_mode"
                android:icon="@drawable/light_mode"
                android:title="@string/switch_light_mode" />
        </menu>
    </item>


    <item android:title="About">
        <menu>
            <item
                android:id="@+id/about"
                android:icon="@drawable/about"
                android:title="@string/about" />
        </menu>
    </item>
</menu>