...
            app:layout_constraintBottom_toBottomOf="@+id/movie_icon"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@tools:sample/first_names" />


        <Button
            android:id="@+id/isFavorite"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/favorite_off"
            android:visibility="invisible"/>
...
