...
                app:layout_constraintTop_toTopOf="parent"
                tools:itemCount="1"
                tools:listitem="@layout/search_movie_item"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/moviesRecycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_movie" />
        </FrameLayout>

...
